# quantum-forge-hardware-predictor

./: .env.example  .gitignore  README.md  pyproject.toml
app/agents/: council.py
app/api/: main.py
app/circuits/: dsl.py  ir.py  qiskit_adapter.py
app/dashboard/: app.py
app/hardware/: presets.py  profile.py  registry.py
app/learning/: correction.py  features.py  synthetic.py
app/prediction/: engine.py  ideal.py  mitigation.py  noise.py  transpile.py
app/reports/: markdown.py
app/storage/: db.py
app/utils/: service.py
docs/: api_reference.md  architecture.md  circuit_language.md  development_log.md  examples.md  hardware_model.md  learning_layer.md  noise_model.md
examples/: bell.qf  deep_chain.qf  ghz4.qf  nonlocal_swap_stress.qf  rotation_interference.qf  superposition3.qf
scripts/: demo_bell.py  run_api.sh  run_dashboard.sh
tests/: conftest.py  test_agents_reports.py  test_api.py  test_circuits.py  test_hardware.py  test_learning.py  test_mitigation_registry.py  test_prediction.py
