[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-forge-hardware-predictor"
version = "0.1.0"
description = "AI-assisted hardware-level quantum circuit output prediction system"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "streamlit>=1.30",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "httpx>=0.24"]
qiskit = ["qiskit>=1.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
